--- a/admin.html
+++ b/admin.html
@@ -376,11 +376,11 @@
               </div>
               <div>
                 <label for="div-swim-base-points">Swim base points</label>
-                <input id="div-swim-base-points" type="number" step="1" placeholder="e.g., 250" />
+                <input id="div-swim-base-points" type="number" step="1" value="250" placeholder="e.g., 250" />
               </div>
               <div>
                 <label for="div-swim-pps">Swim points per second</label>
-                <input id="div-swim-pps" type="number" step="0.01" placeholder="e.g., 2" />
+                <input id="div-swim-pps" type="number" step="0.01" value="250" placeholder="e.g., 2" />
               </div>
             </div>
             <div class="form-row">
@@ -390,11 +390,11 @@
               </div>
               <div>
                 <label for="div-obst-base-points">Obstacle base points</label>
-                <input id="div-obst-base-points" type="number" step="1" placeholder="e.g., 250" />
+                <input id="div-obst-base-points" type="number" step="1" value="250" placeholder="e.g., 250" />
               </div>
               <div>
                 <label for="div-obst-pps">Obstacle points per second</label>
-                <input id="div-obst-pps" type="number" step="0.01" placeholder="e.g., 3" />
+                <input id="div-obst-pps" type="number" step="0.01" value="3" placeholder="e.g., 3" />
               </div>
             </div>
             <div class="form-row">
@@ -404,11 +404,11 @@
               </div>
               <div>
                 <label for="div-laser-base-points">Laser base points</label>
-                <input id="div-laser-base-points" type="number" step="1" placeholder="e.g., 500" />
+                <input id="div-laser-base-points" type="number" step="1" value="250" placeholder="e.g., 500" />
               </div>
               <div>
                 <label for="div-laser-pps">Laser points per second</label>
-                <input id="div-laser-pps" type="number" step="0.01" placeholder="e.g., 2" />
+                <input id="div-laser-pps" type="number" step="0.01" value="1" placeholder="e.g., 2" />
               </div>
             </div>
             <div class="form-row">
@@ -418,7 +418,7 @@
               </div>
               <div>
                 <label for="div-fence-base-pts">Fence base points</label>
-                <input id="div-fence-base-pts" type="number" step="1" placeholder="e.g., 250" />
+                <input id="div-fence-base-pts" type="number" step="1" value="250" placeholder="e.g., 250" />
               </div>
               <div>
                 <label for="div-fence-ppv">Fence points per victory</label>
